kubernetes/deployment-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saena-api
spec:
  selector:
    matchLabels:
      app: saena-api
  template:
    metadata:
      labels:
        app: saena-api
    spec:
      containers:
        - name: saena-api
          image: "arunr80/saena-as-api:k8"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
