kubernetes/service-prod.yml

apiVersion: v1
kind: Service
metadata:
  name: saena-api
spec:
  type: NodePort
  selector:
    app: saena-api
  ports:
  - port: 8080
    targetPort: 8080
