kubernetes/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saena-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: saena-as-api
spec:
  rules:
  - host: api.saena4.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: saena-api
            port: 
              number: 8080
